# topsis

./: .gitignore  README.md
Part1/: data.csv  topsis.py
Part2/: README.md  pyproject.toml  requirements.txt
Part2/topsis_kanishka_102317165/: cli.py  core.py
Part3/: app.py  requirements.txt
Part3/results/: topsis_result.csv
Part3/templates/: index.html
